[metadata]
name = atomi_mini_api
version = 0.0.1
description = API for simple fullstack webapp 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pawngrubber/template
author = paper-dragonfly
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: GNU GPLv3 License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only


[options]
packages = find:
python_requires = >=3.9
package_dir =
    = src

[options.packages.find]
where = src